--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "url": "https://github.com/liof-io/liof.git"
   },
   "devDependencies": {
+    "babelify": "^6.1.2",
     "browserify": "^10.2.4",
     "browserify-incremental": "^3.0.1",
-    "reactify": "^1.1.1"
+    "reactify": "^1.1.1",
+    "coffeeify": "^1.1.0"
   },
   "dependencies": {
     "material-ui": ">=0.9.2",
-    "react": ">=0.13.3"
+    "react": ">=0.13.3",
+    "react-tools": ">=0.13.3",
+    "react-tap-event-plugin": "^0.1.7"
   },
   "author": "Vitaliy Yatsenko",
   "license": "MIT",
