--- a/package.json
+++ b/package.json
@@ -2,26 +2,39 @@
   "name": "liof",
   "version": "1.0.0",
   "description": "Manage any format lists",
+  "homepage": "http://liof.io",
+  "author": "Liof team",
+  "license": "MIT",
+  "keywords": [
+    "liof",
+    "list",
+    "todo",
+    "task"
+    "check list",
+    "manage lists"
+  ],
+  "bugs": {
+    "url": "https://github.com/liof-io/liof/issues"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/liof-io/liof.git"
+  },
+  "engines": {
+    "node": ">= 0.10"
   },
   "devDependencies": {
     "babelify": "^6.1.2",
     "browserify": "^10.2.4",
     "browserify-incremental": "^3.0.1",
     "reactify": "^1.1.1",
-    "coffeeify": "^1.1.0"
+    "coffee-reactify": "^4.0.0",
+    "watchify": "^3.2.3"
   },
   "dependencies": {
     "material-ui": ">=0.9.2",
     "react": ">=0.13.3",
     "react-tools": ">=0.13.3",
     "react-tap-event-plugin": "^0.1.7"
-  },
-  "author": "Vitaliy Yatsenko",
-  "license": "MIT",
-  "engines": {
-    "node": ">= 0.10"
   }
 }
