--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "liof",
     "list",
     "todo",
-    "task"
+    "task",
     "check list",
     "manage lists"
   ],
@@ -24,17 +24,25 @@
     "node": ">= 0.10"
   },
   "devDependencies": {
-    "babelify": "^6.1.2",
-    "browserify": "^10.2.4",
-    "browserify-incremental": "^3.0.1",
-    "reactify": "^1.1.1",
-    "coffee-reactify": "^4.0.0",
-    "watchify": "^3.2.3"
+    "babel-core": "^5.6.15",
+    "babel-loader": "^5.2.2",
+    "cjsx-loader": "^2.0.1",
+    "coffee-loader": "^0.7.2",
+    "react-hot-loader": "^1.2.7",
+    "webpack": "^1.10.0",
+    "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
+    "coffee-script": ">=1.9.3",
+    "node-libs-browser": ">= 0.4.0 <=0.6.0",
     "material-ui": ">=0.9.2",
     "react": ">=0.13.3",
     "react-tools": ">=0.13.3",
+    "react-router": ">=1.0.0-beta3",
     "react-tap-event-plugin": "^0.1.7"
+  },
+  "scripts": {
+    "server": "node server.js",
+    "build": "webpack -p --config webpack.production.config.js"
   }
 }
