--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,9 +31,14 @@
     "react-hot-loader": "^1.2.7",
     "webpack": "^1.10.0",
     "webpack-dev-server": "^1.10.1",
-    "normalize.css": "^3.0.3",
     "react-style": ">=0.5.5",
-    "react-flexr": ">=2.0.0"
+    "react-flexr": ">=2.0.0",
+    "normalize.css": "^3.0.3",
+    "style-loader": "^0.12.3",
+    "css-loader": "^0.15.4",
+    "postcss-loader": "^0.5.1",
+    "autoprefixer-core": "^5.2.1",
+    "csswring": "^3.0.5"
   },
   "dependencies": {
     "coffee-script": ">=1.9.3",
