--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,23 +32,18 @@
     "webpack": "^1.10.0",
     "webpack-dev-server": "^1.10.1",
     "react-style": ">=0.5.5",
-    "react-flexr": ">=2.0.0",
     "normalize.css": "^3.0.3",
     "style-loader": "^0.12.3",
-    "css-loader": "^0.15.4",
-    "postcss-loader": "^0.5.1",
-    "autoprefixer-core": "^5.2.1",
-    "csswring": "^3.0.5"
+    "css-loader": "^0.15.4"
   },
   "dependencies": {
     "coffee-script": ">=1.9.3",
-    "node-libs-browser": ">= 0.4.0 <=0.6.0",
     "material-ui": ">=0.9.2",
+    "node-libs-browser": ">= 0.4.0 <=0.6.0",
     "react": ">=0.13.3",
     "react-tools": ">=0.13.3",
     "react-router": ">=1.0.0-beta3",
     "react-tap-event-plugin": "^0.1.7"
-
   },
   "scripts": {
     "server": "node server.js",
