--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,25 +26,21 @@
   "devDependencies": {
     "babel-core": "^5.6.15",
     "babel-loader": "^5.2.2",
-    "cjsx-loader": "^2.0.1",
-    "coffee-loader": "^0.7.2",
-    "react-hot-loader": "^1.2.7",
     "webpack": "^1.10.0",
     "webpack-dev-server": "^1.10.1",
-    "react-style": ">=0.5.5",
-    "normalize.css": "^3.0.3",
+    "react-hot-loader": "^1.2.7",
+    "node-libs-browser": ">= 0.4.0 <=0.6.0",
     "style-loader": "^0.12.3",
     "css-loader": "^0.15.5"
   },
   "dependencies": {
-    "coffee-script": ">=1.9.3",
     "material-ui": ">=0.9.2",
-    "node-libs-browser": ">= 0.4.0 <=0.6.0",
     "react": ">=0.13.3",
     "react-tools": ">=0.13.3",
     "react-router": ">=1.0.0-beta3",
-    "react-tap-event-plugin": "^0.1.7",
-    "flexboxgrid": "^6.2.0"
+    "react-style": ">=0.5.5",
+    "react-tap-event-plugin": ">=0.1.7",
+    "rgx": ">=0.2.0"
   },
   "scripts": {
     "server": "node server.js",
