--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liof",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Manage any format lists",
   "homepage": "http://liof.io",
   "author": "Liof team",
@@ -31,16 +31,18 @@
     "react-hot-loader": "^1.2.7",
     "node-libs-browser": ">= 0.4.0 <=0.6.0",
     "style-loader": "^0.12.3",
-    "css-loader": "^0.15.5"
+    "css-loader": "^0.15.5",
+    "react-style": ">=0.5.5"
   },
   "dependencies": {
     "material-ui": ">=0.9.2",
     "react": ">=0.13.3",
     "react-tools": ">=0.13.3",
-    "react-router": ">=1.0.0-beta3",
-    "react-style": ">=0.5.5",
     "react-tap-event-plugin": ">=0.1.7",
-    "rgx": ">=0.2.0"
+    "react-router": ">=1.0.0-beta3",
+    "rgx": ">=0.2.0",
+    "react-select": ">=0.6.0"
+
   },
   "scripts": {
     "server": "node server.js",
