--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,9 +30,11 @@
     "webpack-dev-server": "^1.10.1",
     "react-hot-loader": "^1.2.7",
     "node-libs-browser": ">= 0.4.0 <=0.6.0",
-    "style-loader": "^0.12.3",
-    "css-loader": "^0.15.5",
-    "react-style": ">=0.5.5"
+    "style-loader": ">=0.12.3",
+    "css-loader": ">=0.15.5",
+    "less-loader": ">=2.2.0",
+    "react-style": ">=0.5.5",
+    "extract-text-webpack-plugin": "^0.8.2"
   },
   "dependencies": {
     "material-ui": ">=0.9.2",
