--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,26 +24,26 @@
     "node": ">= 0.10"
   },
   "devDependencies": {
-    "babel-core": "^5.6.15",
+    "babel-core": "^5.8.22",
     "babel-loader": "^5.2.2",
     "webpack": "^1.10.0",
     "webpack-dev-server": "^1.10.1",
     "react-hot-loader": "^1.2.7",
     "node-libs-browser": ">= 0.4.0 <=0.6.0",
     "style-loader": ">=0.12.3",
-    "css-loader": ">=0.15.5",
+    "css-loader": ">=0.15.6",
     "less-loader": ">=2.2.0",
     "react-style": ">=0.5.5",
-    "extract-text-webpack-plugin": "^0.8.2"
+    "extract-text-webpack-plugin": "^0.8.2",
+    "react-router": ">=1.0.0-beta3"
   },
   "dependencies": {
-    "material-ui": ">=0.9.2",
+    "material-ui": ">=0.10.4",
     "react": ">=0.13.3",
     "react-tools": ">=0.13.3",
     "react-tap-event-plugin": ">=0.1.7",
-    "react-router": ">=1.0.0-beta3",
-    "rgx": ">=0.2.0",
-    "react-select": ">=0.6.0"
+    "rgx": ">=0.2.1",
+    "react-select": ">=0.6.1"
 
   },
   "scripts": {
