--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-router": ">=1.0.0-beta3",
     "react-redux": ">=1.0.1",
     "redux": ">=1.0.1",
+    "redux-thunk": ">=0.1.0",
     "react-select": ">=0.6.1",
     "immutable": "^3.7.4",
     "material-ui": ">=0.10.4",
