--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "react-redux": ">=1.0.1",
     "redux": ">=1.0.1",
     "redux-thunk": ">=0.1.0",
+    "axios": ">=0.5.4",
     "react-select": ">=0.6.1",
     "immutable": "^3.7.4",
     "material-ui": ">=0.10.4",
