--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,29 +26,29 @@
   "devDependencies": {
     "babel-core": "^5.8.22",
     "babel-loader": "^5.2.2",
-    "webpack": "^1.10.0",
+    "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1",
     "react-hot-loader": "^1.2.7",
     "node-libs-browser": ">= 0.4.0 <=0.6.0",
-    "style-loader": ">=0.12.3",
-    "css-loader": ">=0.15.6",
-    "less-loader": ">=2.2.0",
-    "react-tap-event-plugin": ">=0.1.7",
-    "react-style": ">=0.5.5",
+    "style-loader": "^0.12.3",
+    "css-loader": "^0.15.6",
+    "less-loader": "^2.2.0",
+    "react-tap-event-plugin": "^0.1.7",
+    "react-style": "^0.5.5",
     "extract-text-webpack-plugin": "^0.8.2",
-    "react-mixin": ">=1.7.0"
+    "react-mixin": "^1.7.0"
   },
   "dependencies": {
+    "history": "^1.8.5",
+    "isomorphic-fetch": "^2.1.1",
+    "material-ui": "^0.10.4",
     "react": "^0.13.3",
-    "react-router": ">=1.0.0-beta3",
-    "react-redux": ">=1.0.1",
-    "redux": ">=1.0.1",
-    "redux-thunk": ">=0.1.0",
-    "axios": ">=0.5.4",
-    "react-select": ">=0.6.1",
-    "immutable": "^3.7.4",
-    "material-ui": ">=0.10.4",
-    "rgx": ">=0.2.1"
+    "react-redux": "^2.1.1",
+    "react-router": "1.0.0-beta3",
+    "react-select": "^0.6.1",
+    "redux": "^2.0.0",
+    "redux-thunk": "^0.1.0",
+    "rgx": "^0.2.1"
   },
   "scripts": {
     "server": "node server.js",
